RESOLVED FIXED280956
Clicking on the CSS resize handle doesn't trigger mouse down or mouse up event
https://bugs.webkit.org/show_bug.cgi?id=280956
Summary Clicking on the CSS resize handle doesn't trigger mouse down or mouse up event
Jay Wang
Reported 2024-10-06 21:33:50 PDT
Clicking the resize handle (from CSS `resize: both`) doesn't fire any mouse events (e.g., mousedown, mouseup). See a live demo here: https://codepen.io/xiaohk/pen/QWeEzaP?editors=1111 It works on Firefox and Chrome.
Attachments
Jay Wang
Comment 1 2024-10-06 21:34:47 PDT
Jay Wang
Comment 2 2024-10-06 21:34:57 PDT
Jay Wang
Comment 3 2024-10-06 21:35:43 PDT
See a live demo here: https://codepen.io/xiaohk/pen/QWeEzaP?editors=1111 The events fire on Firefox and Chrome, but not Safari.
Jay Wang
Comment 4 2024-10-06 21:39:38 PDT
Another interesting bug: I can't see my posted Bugzilla comments on Safari. I can see them on Firefox _(:з」∠)_
Radar WebKit Bug Importer
Comment 5 2024-10-13 21:34:14 PDT
alankreader
Comment 6 2025-02-07 16:21:52 PST
This bug requires writing a completely novel resize handler in javascript just to enable mouse events while resizing, which isn't a small task! This is the same bug as https://bugs.webkit.org/show_bug.cgi?id=266464
Alexsander Borges Damaceno
Comment 7 2025-05-25 23:12:50 PDT
EWS
Comment 8 2025-06-04 17:09:40 PDT
Committed 295846@main (f63100da315a): <https://commits.webkit.org/295846@main> Reviewed commits have been landed. Closing PR #45907 and removing active labels.
Ahmad Saleem
Comment 9 2025-06-04 17:41:56 PDT
*** Bug 266464 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.