[Fix] Clicking on the CSS resize handle doesn't trigger mouse down https://bugs.webkit.org/show_bug.cgi?id=280956

Reviewed by Simon Fraser.

The bug occurred because the function that dispatch mouse down events was returning
before dispatch mouse down events when the click was in resizer coordinates
In the event handler for the mouse down event, there was a condition that checked whether the click coordinates were inside a resizer control.
If true, some condition variables were being set, and the function returned early
preventing the rest of the mouse down logic dispatch code from executing.

this patch align this behavior with other browsers.

* LayoutTests/fast/events/mouse_resizer_mousedown-expected.txt: Added.
* LayoutTests/fast/events/mouse_resizer_mousedown.html: Added.
* LayoutTests/fast/events/mouse-events-on-textarea-resize-expected.txt:
* LayoutTests/platform/ios/TestExpectations:
* Source/WebCore/page/EventHandler.cpp:
(WebCore::EventHandler::handleMousePressEvent):

Canonical link: https://commits.webkit.org/295846@main